# polyculture-robotics

./: .gitignore  prototype1_config1
REV 1/URDFAssembly.SLDASM/: CMakeLists.txt  package.xml
REV 1/URDFAssembly.SLDASM/URDFAssembly.SLDASM/config/: joint_names_URDFAssembly.SLDASM.yaml
REV 1/URDFAssembly.SLDASM/URDFAssembly.SLDASM/launch/: display.launch
REV 1/URDFAssembly.SLDASM/URDFAssembly.SLDASM/meshes/: link_4.STL
REV 1/URDFAssembly.SLDASM/URDFAssembly.SLDASM/urdf/: URDFAssembly.SLDASM.urdf
REV 1/URDFAssembly.SLDASM/launch/: gazebo.launch
REV 1/URDFAssembly.SLDASM/meshes/: base_link.STL  end_effector.STL  link_1.STL  link_6.STL
REV 1/URDFAssembly.SLDASM/urdf/: URDFAssembly.SLDASM.csv  URDFAssembly.SLDASM.urdf
URDF_REV_3/: CMakeLists.txt  package.xml
URDF_REV_3/config/: joint_names_URDF_REV_3.yaml
URDF_REV_3/launch/: display.launch  gazebo.launch
URDF_REV_3/meshes/: grip_left.STL  grip_right.STL  link_1.STL  link_3.STL  link_5.STL  link_6.STL
URDF_REV_3/urdf/: URDF_REV_3.csv  URDF_REV_3.urdf
arduinoCode/: 3stepper_teleop.ino  serv2.ino  steppercode.ino
arduinoCode/3Stepper4Servo_PrototypeTest/: 3Stepper4Servo_PrototypeTest.ino
arduinoCode/3stepper_teleop/: 3stepper_teleop.ino
arduinoCode/3steppers/: 3steppers.ino
arduinoCode/full_teleop/: full_teleop.ino
arduinoCode/serv2/: serv2.ino
arduinoCode/step_input_sketch/: step_input_sketch.ino
crop_segmentation/: .gitignore  identify_crops.py
red_segmentation/: CMakeLists.txt  redball.cpp
redball/red_segmentation/: redball.cpp
teleop/: circuit.py  teleop.py
